[ch210] Init form container and element

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -17,6 +17,9 @@ $havelock-blue: #6a9bdc;
 $tornado: #868686;
 $coral-red: #ff3c3c;
 $dove-gray: #646464;
+$dodger-blue: #569eff;
+$azure-radiance: #0297fd;
+$dark-charcoal: #333333;
 
 // Map of breakpoints
 $breakpoints: (
