--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   box-sizing: border-box;
   width: 100%;
-  padding: 0 rem(16px);
 
   @include respond-above('md') {
     padding: 0 5%;
@@ -16,10 +15,25 @@
   }
 
   &__header,
-  &__input-group,
   &__actionable {
     &:not(:last-child) {
       margin-bottom: rem(24px);
+    }
+  }
+
+  &__input-section {
+    display: flex;
+    flex-direction: column;
+
+    @include respond-above('md') {
+      flex-direction: row;
+    }
+
+    &--upper {
+    }
+
+    &--lower {
+      flex-wrap: wrap;
     }
   }
 
@@ -39,11 +53,18 @@
 
   &__input-group {
     width: 100%;
+    margin-bottom: rem(24px);
+
+    @include respond-above('md') {
+      width: 50%;
+    }    
   }
 
   &__actionable {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
   &__input {
@@ -52,16 +73,26 @@
     padding: rem(4px 12px);
   }
 
+  // TODO: Remove this when reCAPTCHA is available
+  &__recaptcha {
+    width: 100%;
+    height: rem(105px);
+    margin-bottom: rem(32px);
+    background-color: cadetblue;
+  }
+
   &__button {
-    color: $light;
-    text-decoration: none;
+    padding: rem(16px 96px);
+    border-radius: rem(26px);
     margin: 0;
-    padding: rem(5px 10px);
-    border-radius: rem(3px);
-    background-color: $shuttle-gray;
+    
+    background-color: $dodger-blue;
+    color: $light;
+
+    text-decoration: none;
 
     &:hover {
-      background-color: darken($silver, 8%);
+      background-color: darken($dodger-blue, 8%);
     }
   }
 }
