--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  &__input-section {
+  &__input-stack {
     display: flex;
     flex-direction: column;
     gap: 10%;
@@ -73,8 +73,8 @@
   }
 
   &__input {
-    width: 100%;
     box-sizing: border-box;
+    width: 100%;
     padding: rem(4px 12px);
   }
 
@@ -83,18 +83,26 @@
     width: 100%;
     height: rem(105px);
     margin-bottom: rem(32px);
+
     background-color: cadetblue;
   }
 
   &__button {
-    padding: rem(16px 96px);
+    padding: rem(16px 112px);
     border-radius: rem(26px);
     margin: 0;
 
     background-color: $dodger-blue;
     color: $light;
 
+    font-size: rem(18px);
+    font-weight: 500;
     text-decoration: none;
+
+    @include respond-above('md') {
+      padding: rem(12px 42px);
+      font-size: rem(16px);
+    }
 
     &:hover {
       background-color: darken($dodger-blue, 8%);
