--- a/src/styles/components/_hamburger.scss
+++ b/src/styles/components/_hamburger.scss
@@ -2,15 +2,14 @@
   position: relative;
   display: block;
 
-  z-index: 1;
   user-select: none;
 
   & span {
+    position: relative;
     display: block;
     width: rem(33px);
     height: rem(4px);
     margin-bottom: rem(5px);
-    position: relative;
 
     background: $dark;
     border-radius: rem(3px);
@@ -25,6 +24,10 @@
 
   & span:first-child {
     transform-origin: 0% 0%;
+  }
+
+  & span:nth-child(3) {
+    width: rem(22px)
   }
 
   & span:nth-last-child(2) {
@@ -66,10 +69,11 @@
 
   &__menu {
     position: absolute;
+    display: block;
     box-sizing: border-box;
     width: 100%;
-    margin: rem(14px) 0 0 rem(-16px);
-    padding: rem(20px 40px) rem(40px);
+    margin: rem(12px) 0 0 rem(-16px);
+    padding: rem(20px 60px) rem(40px);
 
     background: $light;
     list-style-type: none;
@@ -77,9 +81,11 @@
     /* to stop flickering of text in safari */
 
     transform-origin: 0% 0%;
-    transform: translate(0, -126%);
-
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transform: translate(0%, -126%);
+    
+    
+    // transition: opacity 5s ease-in;
+    transition:transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
 
   &__menu-list {
