--- a/src/styles/layouts/_layout-home.scss
+++ b/src/styles/layouts/_layout-home.scss
@@ -32,7 +32,7 @@
 
     display: flex;
     justify-content: center;
-    background-color: $silver;
+    background-color: $light;
   }
 
   & > main {
