--- a/src/styles/components/_hamburger.scss
+++ b/src/styles/components/_hamburger.scss
@@ -6,18 +6,16 @@
 
   > span {
     position: relative;
+    z-index: 1;
     display: block;
+    border-radius: rem(3px);
     width: rem(24px);
     height: rem(3px);
     margin-bottom: rem(5px);
 
     background: $dark;
-    border-radius: rem(3px);
-
-    z-index: 1;
 
     transform-origin: rem(4px 0px);
-
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
       opacity 0.55s ease;
   }
@@ -38,7 +36,7 @@
   &__input {
     position: absolute;
     display: block;
-    width: 24px;
+    width: rem(24px);
     height: 100%;
     margin: 0;
     opacity: 0;
@@ -50,7 +48,7 @@
     -webkit-touch-callout: none;
 
     &:checked {
-      width: 20px;
+      width: rem(20px);
       height: 100%;
     }
 
