--- a/src/styles/components/_sign-up-form.scss
+++ b/src/styles/components/_sign-up-form.scss
@@ -6,7 +6,7 @@
   max-width: $sign-up-form-max-width;
   margin: auto;
 
-  background-color: $silver;
+  background-color: $light;
 
   &__header {
     display: flex;
