--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -48,14 +48,11 @@
     width: 100%;
   }
 
-  &__input-group {
+  &__input-password {
     position: relative;
     display: flex;
+    flex-direction: column;
     box-sizing: border-box;
-
-    @include respond-above('md') {
-      padding-right: rem(80px);
-    }
   }
 
   &__input {
@@ -96,12 +93,8 @@
 
   &__eye-icon {
     position: absolute;
-    right: 2%;
+    right: rem(16px);
     top: 0;
     cursor: pointer;
-
-    @include respond-above('md') {
-      right: 15%;
-    }
   }
 }
