--- a/src/styles/layouts/_layout-product-view.scss
+++ b/src/styles/layouts/_layout-product-view.scss
@@ -1,7 +1,7 @@
 .layout-product-view {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: map-get($header-height, 'sm') 1fr 1fr;
+  grid-template-rows: map-get($header-height, 'sm') repeat(2, 1fr);
   grid-template-areas:
     'header'
     'main'
@@ -18,7 +18,13 @@
   }
 
   @include respond-above('xl') {
+    grid-template-columns: 1fr minmax(rem(1104px), rem(1440px)) 1fr;
     grid-template-rows: map-get($header-height, 'xl') 1fr map-get($footer-height, 'xl');
+    column-gap: rem(48px);
+    grid-template-areas:
+      'header header header'
+      '. main .'
+      'footer footer footer';
   }
 
   & > header {
@@ -35,12 +41,17 @@
     background-color: $alabaster;
     
     @include respond-above('md') {
-      padding: 4.5% 6%;
+      padding: 0 rem(24px);
       background-color: $light;
     }
 
     @include respond-above('lg') {
-      padding: 5% 10%;
+      padding: 0 rem(32px);
+    }
+
+    @include respond-above('xl') {
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
