--- a/src/styles/components/_product-information.scss
+++ b/src/styles/components/_product-information.scss
@@ -1,6 +1,6 @@
 .product-information {
   box-sizing: border-box;
-  padding: rem(24px);
+  padding: rem(18px 24px);
 
   @include respond-above('md') {
     padding: 0;
@@ -13,12 +13,99 @@
     }
   }
 
+  &__header {
+    display: flex;
+    align-items: center;
+
+    @include respond-above('md') {
+      width: rem(200px);
+      padding: rem(20px) 0 0 rem(28px);
+      border-top-left-radius: rem(32px);
+    }
+
+    @include respond-above('lg') {
+      width: rem(220px);
+      padding: rem(24px) 0 0 rem(32px);
+    }
+  }
+
+  &__subheader {
+    display: none;
+
+    @include respond-above('md') {
+      display: block;
+      margin-bottom: rem(20px);
+    }
+
+    @include respond-above('lg') {
+      margin-bottom: rem(24px);
+    }
+  }
+
+  &__title {
+    all: unset;
+
+    font-size: rem(22px);
+    line-height: 1.48;
+
+    @include respond-above('sm') {
+      font-size: rem(24px);
+    }
+
+    @include respond-above('md') {
+      font-size: rem(16px);
+      font-weight: 600;
+    }
+
+    @include respond-above('lg') {
+      font-size: rem(19px);
+    }
+  }
+
+  &__subtitle {
+    all: unset;
+
+    color: $cat-black;
+    font-size: rem(19px);
+    font-weight: 500;
+    line-height: 1.5;
+
+    @include respond-above('lg') {
+      font-size: rem(22px);
+    }
+  }
+
+  &__description {
+    margin: 0;
+
+    color: $iron;
+    font-size: rem(14px);
+    line-height: 1.3;
+
+    @include respond-above('sm') {
+      font-size: rem(16px);
+    }
+
+    @include respond-above('md') {
+      color: $darker-gunpowder-gray;
+      font-size: rem(17px);
+    }
+
+    @include respond-above('lg') {
+      font-size: rem(20px);
+    }
+  }
+
   &__body {
     padding-top: rem(8px);
 
     @include respond-above('md') {
-      padding: rem(24px 32px);
+      padding: rem(20px 28px);
       border-radius: 0 0 rem(32px 32px);
+    }
+
+    @include respond-above('lg') {
+      padding: rem(24px 32px);
     }
   }
 
@@ -30,60 +117,6 @@
       width: rem(22px);
       height: rem(18px);
       margin-right: rem(16px);
-    }
-  }
-
-  &__header {
-    display: flex;
-    align-items: center;
-
-    @include respond-above('md') {
-      width: rem(220px);
-      padding: rem(24px) 0 0 rem(32px);
-      border-top-left-radius: rem(32px);
-    }
-  }
-
-  &__subheader {
-    display: none;
-
-    @include respond-above('md') {
-      display: block;
-      margin-bottom: rem(24px);
-    }
-  }
-
-  &__title {
-    all: unset;
-
-    font-size: rem(26px);
-    line-height: 1.48;
-
-    @include respond-above('md') {
-      font-size: rem(19px);
-      font-weight: 600;
-    }
-  }
-
-  &__subtitle {
-    all: unset;
-
-    margin: 0;
-    color: $cat-black;
-    font-size: rem(22px);
-    font-weight: 500;
-    line-height: 1.5;
-  }
-
-  &__description {
-    margin: 0;
-
-    color: $iron;
-    font-size: rem(20px);
-    line-height: 1.3;
-
-    @include respond-above('md') {
-      color: $darker-gunpowder-gray;
     }
   }
 }
